基类和基础界面

--- a/chongWuKongJing/app/src/main/res/values/styles.xml
+++ b/chongWuKongJing/app/src/main/res/values/styles.xml
@@ -14,4 +14,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <!-- 横向线条 -->
+    <style name="h_line">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1dip</item>
+        <item name="android:background">#E2E2E2</item>
+    </style>
 </resources>
