--- a/chongWuKongJing/app/src/main/res/layout/activity_main.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:fitsSystemWindows="true"
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.sim.chongwukongjing.ui.Base.wigdet.NoScrollViewPager
+        android:id="@+id/main_view_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_above="@+id/main_view">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="330dp"
-            android:layout_height="330dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/machine" />
-    </LinearLayout>
+    </com.sim.chongwukongjing.ui.Base.wigdet.NoScrollViewPager>
 
-    <LinearLayout
+    <View
+        android:id="@+id/main_view"
+        style="@style/h_line"
+        android:layout_height="1px"
+        android:layout_above="@id/rl_bottom" />
+
+    <RelativeLayout
+        android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true">
 
-        <TextView
-            android:id="@+id/textView"
+        <com.qmuiteam.qmui.widget.QMUITabSegment
+            android:id="@+id/main_tab_segment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:text="欢迎" />
+            android:layout_height="50dp"
+            android:background="@color/white"
+            android:isScrollContainer="true"
+            app:qmui_tab_icon_position="top">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:text="My    AIR    MEDIC" />
+        </com.qmuiteam.qmui.widget.QMUITabSegment>
+    </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="@color/btn_filled_blue_bg_normal"
-                android:gravity="center"
-                android:textSize="18dp"
-                android:text="新用户" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#ADD8E6"
-                android:gravity="center"
-                android:textSize="18dp"
-                android:text="登录" />
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
