--- a/chongWuKongJing/app/src/main/res/layout/machine_info.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_info.xml
@@ -70,4 +70,24 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:orientation="vertical">
+
+    <!--com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+        android:id="@+id/groupListView"
+        android:layout_width="match_parent"
+        android:layout_height="65dp" />-->
+
+        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            android:id="@+id/groupListView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/qmui_list_item_height"
+            app:qmui_accessory_type="chevron"
+            app:qmui_orientation="vertical"
+            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
+            app:qmui_commonList_detailColor="@color/qmui_config_color_red"/>
+    </LinearLayout>
 </LinearLayout>
