--- a/chongWuKongJing/app/src/main/res/layout/input_password.xml
+++ b/chongWuKongJing/app/src/main/res/layout/input_password.xml
@@ -41,7 +41,7 @@
         android:layout_height="330dp"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
-        app:srcCompat="@drawable/machine" />
+        app:srcCompat="@drawable/machine_main_picture" />
 
     <TextView
         android:id="@+id/textView8"
