--- a/chongWuKongJing/app/src/main/res/layout/activity_interface.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_interface.xml
@@ -7,6 +7,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/welcome" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:padding="80dp"
+        app:srcCompat="@drawable/welcome_shilaing" />
 </LinearLayout>
