--- a/chongWuKongJing/app/src/main/res/layout/activity_regist.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_regist.xml
@@ -16,16 +16,7 @@
         android:layout_marginTop="35dp"
         android:gravity="center"
         android:textSize="25dp"
-        android:text="登录" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:textSize="15dp"
-        android:textColor="#ADD8E6"
-        android:text="关爱宠物健康" />
+        android:text="新用户注册" />
 
     <EditText
         android:id="@+id/phone"
@@ -36,6 +27,49 @@
         android:hint="手机号"
         android:maxLength="11"
         android:inputType="number"
+        android:maxLines="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/yanzhegnma"
+            style="@style/EditTextStyle"
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:hint="验证码"
+            android:inputType="number"
+            android:maxLength="6"
+            android:maxLines="1" />
+
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            android:id="@+id/huoquyanzhengm"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="40dp"
+            android:layout_gravity="center|bottom"
+            android:background="#ADD8E6"
+            android:gravity="center"
+            android:text="获取验证码"
+            app:qmui_borderColor="@color/qmui_s_link_color" />
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/nicknm"
+        style="@style/EditTextStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:hint="用户名称"
+        android:maxLength="20"
+        android:inputType="textPersonName"
         android:maxLines="1" />
 
     <EditText
