--- a/chongWuKongJing/app/src/main/res/layout/activity_select_login_or_regist.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_select_login_or_regist.xml
@@ -17,7 +17,7 @@
             android:layout_height="330dp"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/machine" />
+            app:srcCompat="@drawable/machine_main_picture" />
     </LinearLayout>
 
     <LinearLayout
