--- a/chongWuKongJing/app/src/main/res/layout/activity_adding_equipment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_adding_equipment.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="30dp"
             android:gravity="center"
             android:textSize="30dp"
-            android:text="欢迎" />
+            android:text="除菌  消臭  防交叉感染" />
 
         <TextView
             android:id="@+id/textView2"
@@ -48,16 +48,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:background="@color/btn_filled_blue_bg_normal"
-                android:gravity="center"
-                android:textSize="18dp"
-                android:text="新用户" />
-
-            <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
@@ -65,7 +55,7 @@
                 android:background="#ADD8E6"
                 android:gravity="center"
                 android:textSize="18dp"
-                android:text="登录" />
+                android:text="添加设备" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
