--- a/chongWuKongJing/app/src/main/res/layout/machine_timing.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_timing.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/qmui_topbar_height" />
 
-    <com.sim.chongwukongjing.ui.Base.wigdet.DynamicWave
+    <com.sim.chongwukongjing.ui.wigdet.DynamicWave
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
