--- a/chongWuKongJing/app/src/main/res/layout/activity_finding_equipment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_finding_equipment.xml
@@ -21,6 +21,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ProductRecy"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
