--- a/chongWuKongJing/app/src/main/res/layout/input_password.xml
+++ b/chongWuKongJing/app/src/main/res/layout/input_password.xml
@@ -4,6 +4,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.qmuiteam.qmui.widget.QMUITopBar
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="70dp" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
@@ -38,16 +43,21 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="330dp"
-        android:layout_height="330dp"
+        android:layout_height="297dp"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         app:srcCompat="@drawable/machine_main_picture" />
 
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="80dp"
         android:background="@drawable/background_gradient"
         android:gravity="center"
         android:textSize="20dp"
