--- a/chongWuKongJing/app/src/main/res/layout/productlist_itemview.xml
+++ b/chongWuKongJing/app/src/main/res/layout/productlist_itemview.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
+    android:background="@color/qmui_config_color_25_pure_black"
     android:layout_height="130dp">
 
     <ImageView
