--- a/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.qmuiteam.qmui.widget.QMUITopBar
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/qmui_topbar_height" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -70,14 +75,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:layout_marginTop="60dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="启动时间" />
@@ -85,7 +90,7 @@
         <TextView
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="关闭时间" />
@@ -93,14 +98,48 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
+        android:layout_weight="1"
+        android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
-        <TimePicker
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:calendarViewShown="false">
+        <TextView
+            android:id="@+id/kaishi"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_weight="1"
+            android:background="#87CEEB"
+            android:gravity="center"
+            android:text="12 : 12"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="30dp" />
 
-        </TimePicker>
+        <TextView
+            android:id="@+id/jieshu"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_weight="1"
+            android:background="#87CEEB"
+            android:gravity="center"
+            android:text="12 : 12"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="30dp" />
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/fabButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center"
+        android:background="@drawable/fab_background"
+        android:text="@string/_10"
+        android:lines="2"/>
+
+
 </LinearLayout>
