--- a/chongWuKongJing/app/src/main/res/layout/drag_item_shanchu.xml
+++ b/chongWuKongJing/app/src/main/res/layout/drag_item_shanchu.xml
@@ -16,7 +16,7 @@
             android:id="@+id/left"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@android:color/holo_blue_bright"
             android:orientation="horizontal"
             android:padding="20dp">
 
@@ -24,6 +24,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="一键关闭" />
+
+            <com.qmuiteam.qmui.widget.QMUIVerticalTextView
+                android:id="@+id/chongminming"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginTop="30dp"
+                android:background="@android:color/holo_blue_bright"
+                android:padding="25dp"
+                android:textSize="30dp"
+                android:text="重命名" />
         </LinearLayout>
 
         <LinearLayout
@@ -111,7 +122,7 @@
             android:id="@+id/right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_red_light"
+            android:background="@android:color/holo_blue_bright"
             android:orientation="horizontal">
 
             <com.qmuiteam.qmui.widget.QMUIVerticalTextView
@@ -119,9 +130,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginTop="30dp"
                 android:background="@android:color/holo_blue_bright"
-                android:padding="20dp"
+                android:padding="25dp"
                 android:textSize="30dp"
+                android:textColor="@color/qmui_config_color_red"
                 android:text="删除" />
 
         </LinearLayout>
