--- a/chongWuKongJing/app/src/main/res/layout/input_password.xml
+++ b/chongWuKongJing/app/src/main/res/layout/input_password.xml
@@ -42,10 +42,11 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="330dp"
-        android:layout_height="297dp"
+        android:layout_width="357dp"
+        android:layout_height="236dp"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         app:srcCompat="@drawable/machine_main_picture" />
 
     <View
