--- a/chongWuKongJing/app/src/main/res/layout/machine_state.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_state.xml
@@ -28,13 +28,19 @@
                 app:srcCompat="@drawable/main_screen_drawable_mine_selected" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/diqu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="上海   徐汇区" />
         </LinearLayout>
+
+        <View
+            android:layout_width="3px"
+            android:background="@color/black"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,6 +48,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/wendu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -51,6 +58,7 @@
                 android:text="31" />
 
             <TextView
+                android:id="@+id/tianqi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -58,12 +66,19 @@
                 android:text="多云转晴 " />
 
             <TextView
+                android:id="@+id/zuidigao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20 / 35" />
         </LinearLayout>
+
+        <View
+            android:layout_width="3px"
+            android:background="@color/black"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,7 +86,7 @@
             android:orientation="vertical">
 
             <TextView
-
+                android:id="@+id/shidu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -79,7 +94,7 @@
                 android:text="温度   66%" />
 
             <TextView
-
+                android:id="@+id/fengdu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -89,10 +104,14 @@
     </LinearLayout>
 
 
+    <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="561dp">
+
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/GifImageView"
         android:layout_width="wrap_content"
-        android:layout_height="248dp"
+        android:layout_height="212dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/dp_10"
         android:src="@drawable/kuaisu_x_b" />
@@ -102,18 +121,38 @@
         android:layout_width="330dp"
         android:layout_height="247dp"
         android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         app:srcCompat="@drawable/machine_main_picture" />
+</FrameLayout>
 
-    <SeekBar
-        android:id="@+id/seekBar2"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:progressDrawable="@drawable/progress_style"
-        android:thumb="@null"
-        android:max="3"
-        android:progress="1"
-        android:maxHeight="30dp"
-        android:minHeight="30dp"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="73dp"
+            android:layout_height="64dp"
+            android:layout_marginLeft="@dimen/dp_10"
+
+            app:srcCompat="@drawable/dengpao" />
+
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:max="3"
+            android:maxHeight="30dp"
+            android:minHeight="30dp"
+            android:progress="1"
+            android:progressDrawable="@drawable/progress_style"
+            android:thumb="@null" />
+
+    </LinearLayout>
 
 </LinearLayout>
