--- a/chongWuKongJing/app/src/main/res/layout/machine_info_rel.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_info_rel.xml
@@ -4,9 +4,127 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView9"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/machine_main_picture" />
+        android:layout_height="98dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/fengdangtu" />
+
+        <TextView
+            android:id="@+id/feng1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:text="低风挡" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+
+            android:layout_width="70dp"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/naozhong" />
+
+        <TextView
+            android:id="@+id/shijian1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:text="06:00开始连续运行4h" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+
+            android:layout_width="70dp"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/dengpaotu" />
+
+        <TextView
+            android:id="@+id/liangdu1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:text="低亮度" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+
+            android:layout_width="70dp"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/lainxuyunxing" />
+
+        <TextView
+            android:id="@+id/moshi1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:text="连续运行" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+
+            android:layout_width="70dp"
+            android:layout_marginLeft="35dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/lainxuyunxing" />
+
+        <TextView
+            android:id="@+id/yetiyuliang1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:textSize="20dp"
+            android:text="液体剩余量60%" />
+    </LinearLayout>
 </LinearLayout>
