--- a/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
@@ -110,7 +110,7 @@
             android:layout_weight="1"
             android:background="#87CEEB"
             android:gravity="center"
-            android:text="12 : 12"
+            android:text="12:12"
             android:textColor="@color/cardview_light_background"
             android:textSize="30dp" />
 
@@ -123,7 +123,7 @@
             android:layout_weight="1"
             android:background="#87CEEB"
             android:gravity="center"
-            android:text="12 : 12"
+            android:text="12:12"
             android:textColor="@color/cardview_light_background"
             android:textSize="30dp" />
     </LinearLayout>
