--- a/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
@@ -4,9 +4,28 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/imageView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/machine_main_picture" />
+        app:srcCompat="@drawable/machine_main_picture" />-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/GifImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="212dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/kuaisu_x_b" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="330dp"
+            android:layout_height="247dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/machine_main_picture" />
+    </FrameLayout>
 </LinearLayout>
