--- a/chongWuKongJing/app/src/main/res/layout/activity_login.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_login.xml
@@ -82,9 +82,10 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="116dp"
+
         android:layout_weight="1" />
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -112,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <TextView
         android:id="@+id/next"
