--- a/chongWuKongJing/app/src/main/res/layout/machine_state.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_state.xml
@@ -104,31 +104,30 @@
     </LinearLayout>
 
 
-    <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="561dp">
+    <RelativeLayout
+    android:layout_width="match_parent" android:layout_weight="1"
+    android:layout_height="0dp">
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/GifImageView"
         android:layout_width="wrap_content"
         android:layout_height="212dp"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="@dimen/dp_10"
         android:src="@drawable/kuaisu_x_b" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="330dp"
-        android:layout_height="247dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
-        app:srcCompat="@drawable/machine_main_picture" />
-</FrameLayout>
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="330dp"
+            android:layout_height="247dp"
+            android:layout_below="@id/GifImageView"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/machine_main_picture" />
+</RelativeLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
@@ -143,7 +142,6 @@
             android:id="@+id/seekBar2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:max="3"
