--- a/chongWuKongJing/app/src/main/res/layout/yeti_fragment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/yeti_fragment.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="match_parent"
-        android:layout_height="303dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="100dp"
         app:srcCompat="@drawable/yeliang" />
 
